--- a/InstagramClone/app/src/main/res/layout/activity_main.xml
+++ b/InstagramClone/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="#6D0ABF6C"
+    tools:context=".view.MainActivity">
 
     <EditText
         android:id="@+id/emailText"
