--- a/InstagramClone/app/src/main/res/layout/activity_upload.xml
+++ b/InstagramClone/app/src/main/res/layout/activity_upload.xml
@@ -5,12 +5,13 @@
     android:id="@+id/selectImageView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UploadActivity">
+    android:background="#6D0ABF6C"
+    tools:context=".view.UploadActivity">
 
     <ImageView
         android:id="@+id/selectImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="230dp"
+        android:layout_height="150dp"
         android:layout_marginTop="96dp"
         android:layout_marginBottom="20dp"
         android:onClick="selectImage"
